feat: add payment method
