# src/modules/meters/meters.controller.ts
@@ -1,4 +1,4 @@
-import { Body, Controller, Get, Param, Patch, Put } from '@nestjs/common';
+import { Body, Controller, Get, Param, Post, Put } from '@nestjs/common';
 import {
   ApiBadRequestResponse,
   ApiNotFoundResponse,
@@ -6,7 +6,8 @@ import {
   ApiOperation,
   ApiTags,
 } from '@nestjs/swagger';
-import { Paginate, PaginateQuery, Paginated } from 'nestjs-paginate';
+import { Paginate, PaginateQuery } from 'nestjs-paginate';
+import { PaginateQueryOptions } from 'src/decorators/pagination';
 import { MetricEntity } from '../metrics/entities/metric.entity';
 import { PaymentEntity } from '../payments/entities/payment.entity';
 import { CreateMeterDto } from './dto/create-meter.dto';
@@ -19,7 +20,7 @@ export class MetersController {
   public constructor(private readonly metersService: MetersService) {}
 
   @ApiOperation({ summary: 'Получить все счетчики' })
-  @ApiOkResponse({ type: Paginated<MeterEntity> })
+  @PaginateQueryOptions(MeterEntity)
   @Get()
   public async getAll(@Paginate() query: PaginateQuery) {
     return this.metersService.findAll(query);
@@ -34,7 +35,7 @@ export class MetersController {
   }
 
   @ApiOperation({ summary: 'Получить метрики по серийному номеру счетчика' })
-  @ApiOkResponse({ type: Paginated<MetricEntity> })
+  @PaginateQueryOptions(MetricEntity)
   @ApiNotFoundResponse({ description: 'Счетчик не найден' })
   @Get(':serial/metrics')
   public async getMetricsBySerial(
@@ -45,7 +46,7 @@ export class MetersController {
   }
 
   @ApiOperation({ summary: 'Получить оплаты по серийному номеру счетчика' })
-  @ApiOkResponse({ type: Paginated<PaymentEntity> })
+  @PaginateQueryOptions(PaymentEntity)
   @ApiNotFoundResponse({ description: 'Счетчик не найден' })
   @Get(':serial/payments')
   public async getPaymentsBySerial(
@@ -64,9 +65,14 @@ export class MetersController {
   }
 
   @ApiOperation({ summary: 'Оплатить счетчик по серийному номеру' })
-  @ApiNotFoundResponse({ description: 'Счетчик не найден' })
-  @Patch(':serial')
+  @Post(':serial/pay')
   public async payBySerial(@Param('serial') serial: string) {
     return this.metersService.payBySerial(serial);
+  }
+
+  @ApiOperation({ summary: 'Оплатить все счетчики' })
+  @Post('pay')
+  public async pay() {
+    return this.metersService.pay();
   }
 }
